--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=Airbnb
 #DB configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/AirBnb
 spring.datasource.username=postgres
-spring.datasource.password=root
-#spring.datasource.password=postgres
+#spring.datasource.password=root
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
