week6 first commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.servlet.context-path=/api/v1
+
+#Security config
+jwt.secretKey=mliz327nso21b1m9283n8p3278bin32q83x1n298pvcyq3w67ibj2li
